2009-01-09  Jürg Billeter  <j@bitron.ch>

	* vala/valaunaryexpression.vala:

	Fix critical when trying to access instance member,
	fixes bug 566337

2009-01-09  Jürg Billeter  <j@bitron.ch>

	* vala/valacodenode.vala:

	Add CodeNode.get_type_name method

	* vapi/gobject-2.0.vapi:

	Add G_TYPE_FROM_INSTANCE binding

2009-01-09  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gstreamer-netbuffer-0.10/:

	Fix GstNetAddress binding, fixes bug 564924

	* vapi/gstreamer-netbuffer-0.10.vapi: regenerated

2009-01-09  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gstreamer-base-0.10/:

	Fix gst_base_transform_get_unit_size bindings, fixes bug 565978

	* vapi/gstreamer-base-0.10.vapi: regenerated

2009-01-09  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gstreamer-0.10/:

	Fix gst_uri_handler_get_protocols* bindings, fixes bug 566375

	* vapi/gstreamer-0.10.vapi: regenerated

2009-01-09  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gstreamer-0.10/:

	Fix gst_object_get_name, gst_object_get_name_prefix, and
	gst_object_get_path_string bindings, fixes bug 566353

	* vapi/gstreamer-0.10.vapi: regenerated

2009-01-09  Jürg Billeter  <j@bitron.ch>

	* vala/valaparser.vala:

	Do not accept `ref' and `out' expressions outside of arguments,
	fixes bug 548418

2009-01-09  Jürg Billeter  <j@bitron.ch>

	* vala/valalambdaexpression.vala:

	Support lambda expressions throwing errors, fixes bug 563018

2009-01-09  Jürg Billeter  <j@bitron.ch>

	* vala/valaparser.vala:

	Do not allow empty enums and errordomains, fixes bug 543564

2009-01-09  Jürg Billeter  <j@bitron.ch>

	* vala/valaflowanalyzer.vala:

	Perform flow analysis on code in creation methods, fixes bug 566000

2009-01-09  Jürg Billeter  <j@bitron.ch>

	* vala/valascanner.vala:
	* gobject/valaccodebasemodule.vala:

	Fix some type suffix issues with real literals

	* tests/basic-types/floats.test:

	Improve float tests

2009-01-09  Jürg Billeter  <j@bitron.ch>

	* tests/Makefile.am:
	* tests/basic-types/integers.test:
