@@ -1,5 +1,13 @@
 2009-01-09  Jürg Billeter  <j@bitron.ch>
 
+	* gobject/valaccodememberaccessmodule.vala:
+
+	Do not free values returned via g_object_get prematurely, require
+	properties without accessor methods to return an owned value,
+	fixes bug 559644
+
+2009-01-09  Jürg Billeter  <j@bitron.ch>
+
 	* vala/valaunaryexpression.vala:
 
 	Fix critical when trying to access instance member,
